@@ -78,7 +78,9 @@ int generateAquaedConfig(s_fidoconfig *config, char *fileName, char *includeFile
          fprintf(f, "Address %u:%u/%u.%u\n", config->addr[i].zone, config->addr[i].net, config->addr[i].node, config->addr[i].point);
       fprintf(f, "\n");
 
-      writeArea(f, &(config->netMailArea), 1);
+      for (i=0; i<config->netMailAreaCount; i++) {
+         writeArea(f, &(config->netMailAreas[i]), 1);
+      }
       writeArea(f, &(config->dupeArea), 1);
       writeArea(f, &(config->badArea), 1);
 
