@@ -110,7 +110,9 @@ int generateMsgEdConfig(s_fidoconfig *config, char *fileName, int areasOnly) {
        fprintf(f, "\n");
      }
 
-     writeArea(f, &(config->netMailArea), 1);
+     for (i=0; i<config->netMailAreaCount; i++) {
+         writeArea(f, &(config->netMailAreas[i]), 1);
+     }
      writeArea(f, &(config->dupeArea), 2);
      writeArea(f, &(config->badArea), 2);
 
